# video-dl

./: .gitignore  README.md  bilibili.py  config.json  media.py  requirements.txt  setup.cfg  toolbox.py
.github/workflows/: codeql-analysis.yml  pypi.yml
src/: download.py  video-dl.py
src/video_dl/: __init__.py  args.py  bilibili.py  danmaku.py  entry.py  extractor.py  media.py  spider.py  toolbox.py  video.py
src/video_dl/extractors/: __init__.py  bilibili.py
src/video_dl/resource/: ass_header.txt  bilibili_sub.js  config.json  ixigua_acrawler.js  qq_ckey.js
src/video_dl/sites/: __init__.py  bilibili.py
src/video_dl/sites/bilibili/: __init__.py  dm_pb2.py  extractor.py  json2ass.py  spider.py
src/video_dl/sites/ixigua/: __init__.py  extractor.py  spider.py
src/video_dl/sites/pornhub/: __init__.py  extractor.py  spider.py
src/video_dl/sites/qq/: __init__.py  spider.py
src/video_dl/sites/xvideos/: __init__.py  extractor.py  spider.py
src/video_dl/spiders/: __init__.py  bilibili.py
