[metadata]
name = video_dl
version = attr: video_dl.__version__
author = StableGenius
author_email = fengdongfa1995@163.com
description = A naive online video downloader based on aiohttp
long_description = file: README.md
long_description_content_type = text/markdown
keywords = video downloader, aiohttp
license = APACHE LICENSE, VERSION 2.0
url = https://github.com/fengdongfa1995/video_dl
project_urls =
    Bug Tracker = https://github.com/fengdongfa1995/video_dl/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: Chinese (Simplified)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp
    prettytable
    uvloop;platform_system=='Linux'

[options.package_data]
* = *.txt, *.json

[options.entry_points]
console_scripts =
    video_dl = video_dl.bilibili:main

[options.packages.find]
where = src

[options.data_files]
. = src/video_dl/resource/user_agents.txt
